--- a/static/css/font/iconfont.css
+++ b/static/css/font/iconfont.css
@@ -2,9 +2,9 @@
   font-family: "iconfont"; /* Project id 4032934 */
   /* Color fonts */
   src: 
-       url('//at.alicdn.com/t/c/font_4032934_cr84babedj4.woff2?t=1685537156532') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4032934_cr84babedj4.woff?t=1685537156532') format('woff'),
-       url('//at.alicdn.com/t/c/font_4032934_cr84babedj4.ttf?t=1685537156532') format('truetype');
+       url('//at.alicdn.com/t/c/font_4032934_ypbw7pmoe9j.woff2?t=1685687344239') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4032934_ypbw7pmoe9j.woff?t=1685687344239') format('woff'),
+       url('//at.alicdn.com/t/c/font_4032934_ypbw7pmoe9j.ttf?t=1685687344239') format('truetype');
 }
 
 .iconfont {
@@ -13,6 +13,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-huasheng:before {
+  content: "\e60a";
 }
 
 .icon-guanliyuan:before {
